test/tests/stages/14_pointers/invalid_types/address_of_ternary.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[5]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: y
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: z
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CAddrOf: 
                      CConditional: 
                        CVar: 
                          TIdentifier: x
                          None: 
                        CVar: 
                          TIdentifier: y
                          None: 
                        CVar: 
                          TIdentifier: z
                          None: 
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
